[MD History] Add history-searched-label to embolden the synced device search.

This CL adds a history-searched-label element which bolds the given title
wherever the given search term appears. This element is then used for the
title of history-items and the title in the synced device search.

BUG=610934
CQ_INCLUDE_TRYBOTS=tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2046303002
Cr-Commit-Position: refs/heads/master@{#400095}

Former-commit-id: 2ffe3ea4196327e425b7b61ce9affd8cff393d8c