chrome/browser/resources/md_history/synced_device_card.js
@@ -32,6 +32,8 @@ Polymer({
 
     // Whether the card is open.
     cardOpen_: {type: Boolean, value: true},
+
+    searchedTerm: String,
   },
 
   /**
